--- a/index.html
+++ b/index.html
@@ -1,47 +1,243 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Mi SPssA</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="custom.js"></script>
+  <style>
+    .card-hover-zoom {
+      transition: transform 0.3s;
+      border-radius: 20px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      margin-bottom: 10%;
+    }
+
+    .card-hover-zoom:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      border-color: #336265;
+      border-width: 3px;
+      
+    }
+
+    .carousel-item img {
+      object-fit: cover;
+      height: 300px;
+    }
+
+    .card-img-top {
+      object-fit: cover;
+      max-height: 100px;
+      border-radius: 20px;
+      padding-left: 5%;
+      padding-right: 5%;
+      padding-top: 5%;
+    }
+
+    .footer-container {
+      background-color: #f8f9fa;
+      padding: 30px 0;
+      margin-top: 50px;
+    }
+
+    .footer-column {
+      text-align: center;
+    }
+
+    .footer-column img {
+      height: 50px;
+      margin-bottom: 10px;
+    }
+
+    .footer-links {
+      margin-top: 20px;
+    }
+    .container-fluid {
+    background-color: #f1f1f1;
+    padding: 20px;    
+  }
+  .frame-top-right {
+    position:absolute;
+    transform: rotate(-495deg);
+    opacity: 60%;
+    max-height: 115px;
+    top:0;
+    right: 0;
+    z-index: 1;
+  }
+
+  .frame-bottom-left {
+    position:absolute;
+    transform: rotate(45deg);
+    opacity: 60%;
+    max-height: 95px;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+  }  
+  .carousel-item {
+      transition: transform 1s ease-in-out;
+   }
+  .lead {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    color: #f1f1f1;
+  }
+  .lead1 {
+    font-size: 34px;
+    font-weight: bold;
+    color:#333333;
+    text-align: center;
+    
+  }
+  .row{
+    margin: 5%;
+  }
+  .card-text{
+    color: #333333;
+  }
+  .card-title{
+    color: #386b6f;
+    font-weight: bold;
+  }
+  </style>
 </head>
-<body>
-  <header style="background-color: #f1f1f1;">
-    <h1 style="color: #333333;">CareerPathFinder-com</h1>
-  </header>
 
-  <nav style="background-color: #336265;">
-    <ul>
-      <li><a href="#" id="inicio" class="active">Inicio</a></li>
-      <li><a href="#" id="sobre-nosotros">Sobre nosotros</a></li>
-      <li><a href="#" id="blog">Blog Page</a></li>
-    </ul>
-  </nav>
-
-  <main style="background-color: #65c8cf;">
-    <div id="content-container">
-      <div id="carousel-container">
-        <div class="carousel">
-          <div class="slide active">
-            <img src="imagen1.jpg" alt="Imagen 1">
-          </div>
-          <div class="slide">
-            <img src="imagen2.jpg" alt="Imagen 2">
-          </div>
-          <div class="slide">
-            <img src="imagen3.jpg" alt="Imagen 3">
+<body style="background-color: #65c8cf;">
+  <div id="navbarContainer"></div>
+  <div id="contentContainer" class="container fade-in">
+      <div class="row">
+      <div class="col-md-6">
+        <p class="lead1">Bienvenido!</p1>
+        <p class="lead">
+          Estas en la plataforma numero 1 que te ayudara a elegir que carrera profesional seguir
+        <p class="lead1">
+        Que nada te pare</p>
+        <div class="text-center">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div id="carouselExample" class="carousel slide" data-ride="carousel">
+          <img src="bottom-left-frame.svg" class="frame-top-right">
+          <img src="bottom-left-frame.svg" class="frame-bottom-left">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="image1.jpg" class="w-100 animated fadeIn" alt="Image 1">
+            </div>
+            <div class="carousel-item">
+              <img src="image2.jpg" class="w-100 animated fadeIn" alt="Image 2">
+            </div>
+            <div class="carousel-item">
+              <img src="image3.jpg" class="w-100 animated fadeIn" alt="Image 3">
+            </div>
           </div>
         </div>
       </div>
-      <div id="text-container">
-        <p id="body-text">
-          <span style="font-size: 36px; color: #346568;">Encuentra mayores <strong>oportunidades</strong></span><br>
-          <span style="font-size: 74px; color: #f1f1f1;">Ingresa ahora</span>
-        </p>
-        <button id="start-button">Empezar ahora</button>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col-md-3">
+        <div class="card card-hover-zoom">
+          <a href="servicio.html">
+            <img src="card1.jpg" class="card-img-top img-fluid rounded" alt="Card 1">
+            <div class="card-body">
+              <h5 class="card-title">Rapida y eficiente</h5>
+              <p class="card-text">Realiza una Encuesta que te ayudará a elegir la carrera apropiada para ti.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card card-hover-zoom">
+          <a href="servicio.html">
+            <img src="card2.jpg" class="card-img-top img-fluid rounded" alt="Card 2">
+            <div class="card-body">
+              <h5 class="card-title">Etapa-free</h5>
+              <p class="card-text">No importa si estas estudiando o ya acabaste una carrera o recien termiaste el colegio.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card card-hover-zoom">
+          <a href="servicio.html">
+            <img src="card3.jpg" class="card-img-top img-fluid rounded" alt="Card 3">
+            <div class="card-body">
+              <h5 class="card-title">No necesitas registrarte</h5>
+              <p class="card-text">No registros, no tramites, solo respuestas a esa duda que uno tiene en la cabeza.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card card-hover-zoom">
+          <a href="servicio.html">
+            <img src="card4.jpg" class="card-img-top img-fluid rounded" alt="Card 4">
+            <div class="card-body">
+              <h5 class="card-title">Contactos rapidos y actualizados</h5>
+              <p class="card-text">Independiente de nuestra metolodgia tienes las opcion de contacto mediante Whatsapp.</p>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
-  </main>
 
-  <script src="script.js"></script>
+    <div class="container-fluid mt-5">
+      <div class="row">
+        <div class="col">
+          <h2>Aprende porque esta metodologia funciona</h2>
+          <p>Lliana LLamas nos cuenta porque la metodologia de las encuestas tienen un impacto positivo en la elección de una carrera universitaria</p>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bfp3vN2B5zo" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+<div id="footerContainer"></div>
+
+  <script>
+    $(document).ready(function() {
+      // Cargar el contenido inicial del navbar
+      $("#navbarContainer").load("navbar.html");
+
+      const container = $("#contentContainer");
+
+      function animateContainer() {
+        container.addClass("animate__animated animate__bounceIn");
+        setTimeout(function() {
+          container.removeClass("animate__animated animate__bounceIn");
+        }, 1000);
+      }
+
+      function loadContent(page) {
+        container.fadeOut(500, function() {
+          container.addClass("animate__animated animate__fadeOut");
+          container.load(page, function() {
+            container.fadeIn(500, function() {
+              container.removeClass("animate__animated animate__fadeOut");
+              animateContainer();
+            });
+          });
+        });
+      }
+
+      // Cargar contenido en el contenedor al hacer clic en los enlaces del navbar
+      $("ul.navbar-nav").on("click", "a", function(e) {
+        e.preventDefault();
+        const page = $(this).attr("href");
+        loadContent(page);
+      });
+    });
+    $("#footerContainer").load("footer.html");
+  </script>
 </body>
+
 </html>
